# tic-tac-toe-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: Agents.cpp  Agents.h  Board.cpp  Board.h  BoardModel.cpp  BoardModel.h  GameController.cpp  GameController.h  MainWindow.cpp  MainWindow.h  main.cpp
tests/: TestAgents.cpp  TestBoard.cpp  TestGameController.cpp
